@@ -1,5 +1,7 @@
 ChangeLog
 ==========
+- allow for re-headering of merged library crams 
+
 release 3.11
 - code added to enable optionally running on Openstack via wr
 - remove check for format of ID field in the input headers
